--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ eggs/
 .eggs/
 lib/
 lib64/
+lib64
 parts/
 sdist/
 var/
@@ -89,6 +90,10 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+include/
+share/
+bin/
+pyvenv.cfg
 
 # Spyder project settings
 .spyderproject
